[gd_scene load_steps=2 format=3 uid="uid://br3o73hsw61ta"]

[ext_resource type="Script" path="res://addons/puzzle_dependencies/views/settings_view.gd" id="1_g7wnn"]

[node name="SettingsView" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g7wnn")

[node name="Toolbar" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 26.0

[node name="Title" type="Label" parent="Toolbar"]
layout_mode = 2
offset_right = 1140.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "Types"

[node name="AddTypeButton" type="Button" parent="Toolbar"]
layout_mode = 2
offset_left = 1144.0
offset_right = 1152.0
offset_bottom = 26.0
flat = true

[node name="TypesList" type="Tree" parent="."]
layout_mode = 2
offset_top = 30.0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_vertical = 3
columns = 4
hide_root = true

[node name="ColorPickerDialog" type="AcceptDialog" parent="."]
title = "Color"
size = Vector2i(306, 507)
min_size = Vector2i(120, 200)

[node name="ColorPicker" type="ColorPicker" parent="ColorPickerDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
edit_alpha = false
deferred_mode = true

[connection signal="pressed" from="Toolbar/AddTypeButton" to="." method="_on_add_type_button_pressed"]
[connection signal="button_clicked" from="TypesList" to="." method="_on_types_list_button_clicked"]
[connection signal="item_edited" from="TypesList" to="." method="_on_types_list_item_edited"]
[connection signal="confirmed" from="ColorPickerDialog" to="." method="_on_color_picker_dialog_confirmed"]
